--- a/main.css
+++ b/main.css
@@ -27,8 +27,17 @@ h1 {
         margin: auto;
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
 }
 
+
+@media(max-width: 1150px) {
+    .game-container {
+        width: calc(100% - 30px);
+        justify-content: center;
+        gap: 35px;
+    }
+}
 
 
 .game-instructions {
@@ -38,6 +47,12 @@ h1 {
     gap: 25px;
 }
 
+@media(max-width: 992px) {
+    .game-instructions {
+        order: -1;
+    }
+}
+
 .key-color {
     display: flex;
     gap: 20px;
@@ -45,6 +60,8 @@ h1 {
     padding: 15px;
     width: 100%;
 }
+
+
 
 .key-color .key {
     width: 30px;
@@ -69,6 +86,13 @@ h1 {
     font-weight: bold;
 }
 
+@media(max-width: 768px) {
+    .key-color .instruct { 
+        max-width: 100%;
+        font-size: 16px;
+    }
+}
+
 input.yes-in-place {
     background-color: rgb(248, 158, 19);
 }
@@ -86,6 +110,12 @@ input.not-in-word {
     flex-direction: column;
     gap: 20px;
     margin-bottom: 25px;
+}
+
+@media(max-width: 768px) {
+    .game-area {
+        max-width: 100%;
+    }
 }
 
 .tries div {
@@ -117,6 +147,14 @@ input[disabled] {
     border-bottom: 2px solid #222;
 }
 
+@media(max-width: 768px) {
+    .tries div input {
+        width: 30px;
+        height: 30px;
+        font-size: 20px;
+    }
+}
+
 .tries div input:focus {
     outline: none;
 }
@@ -143,6 +181,14 @@ input[disabled] {
     cursor: pointer;
 }
 
+@media(max-width: 768px) {
+    .check {
+        width: 150px;
+        height: 40px;
+        font-size: 15px;
+    }
+}
+
 .hint {
     background-color: rgb(0, 150, 136);
     color: white;
@@ -152,6 +198,13 @@ input[disabled] {
     border-radius: 8px;
     font-size: 18px;
     cursor: pointer;
+}
+
+@media(max-width: 768px) {
+    .hint {
+        padding: 10px 20px;
+        font-size: 15px;
+    }
 }
 
 footer {
